syntax = "proto3";

import "openconfig/v1/extensions.proto";
import "openconfig/golang/kingpinv2/v1/extensions.proto";

option go_package = "github.com/thanos-io/OpenConfig/golang/examples/helloworld;helloworldpb";
option java_multiple_files = true;
option java_package = "com.github.openconfig.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package examples.helloworld.v1;

message HelloWorldConfiguration {
    option (openconfig.v1.metadata) = {
        name: "configurable"
        version: "0.1.0"
        description: "example application to showcase OpenConfig 1.0."

        flag_delivery: { name: "--openconfigv1" }
    };

    oneof command {
        HelloCommand hello = 2;
        ByeCommand bye = 3;
    }
}

enum Lang {
    UNSPECIFIED = 0;
    ENGLISH = 1;
    POLISH  = 2;
    GERMAN  = 3;
}

message HelloCommand {
    option (openconfig.golang.kingpinv2.v1.command) = {name :"hello" };

    string name = 1 [(openconfig.v1.required) = true];
    int64 year = 2 [(openconfig.v1.default) = "2021"];
    string world = 3;
    Lang lang = 4;

    bool please_add_really = 5 [deprecated = true];
    bool add_really = 6 [(openconfig.v1.hidden) = true];
}

message ByeCommand {
    option (openconfig.golang.kingpinv2.v1.command) = {name :"bye" };

    Lang lang = 1;
    oneof command {
        ByeJustCommand just = 2;
        ByeConfigurableCommand configurable = 3;
    }
}

message ByeJustCommand {
    option (openconfig.golang.kingpinv2.v1.command) = {name :"just" };
}

message ByeConfigurableCommand {
    option (openconfig.golang.kingpinv2.v1.command) = {name :"configurable" };

    string config_id = 1;
    ByeConfiguration config = 2;
    repeated string extra = 3;
}

message ByeResponse {
    bool capitalized = 1;
}

message ByeConfiguration {
    map<string, ByeResponse> configs = 2;
}